--- a/first/style.css
+++ b/first/style.css
@@ -10,52 +10,49 @@ body {
     box-sizing: border-box;
 }
 
-.header {
-    position: relative;
-}
-
-.header img {
-    width: 100%;
-    position: relative;
+.header{
+    height:600px;
+    background-image: url(./assets/images/5.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top:0;
 }
 
 .navBar {
-    z-index: 2;
-    position: sticky;
-    top: 5px;
+    position: fixed;
+    top: 0px;
+    z-index: 3;
     background-color: white;
     width: 100%;
     height: 50px;
     box-shadow: 0 1px 10px #000000;
-    border-radius: 2px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
-.navBar ol {
-    width: 20%;
+.navBar ol{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    justify-content: space-between;
-    margin-top: 12px;
-    margin-right: 20px;
+    justify-content: space-around;
     list-style: none;
+    gap: 10px;
+    padding: 30px;
 }
 
-.navBar ol li {
-    font-size: large;
-}
-
-a {
+.navBar ol li,a{
     text-decoration: none;
-    color: #000000;
+    color: black;
 }
 
 .navBar p {
-    margin-top: 12px;
-    margin-left: 20px;
+    display: flex;
+    font-size: 20px;
+    padding: 30px;
 }
 
 .navBar p span {
@@ -64,21 +61,18 @@ a {
 
 .textPhoto {
     font-size: 40px;
-    position: absolute;
-    top: 48%;
-    left: 40%;
 }
 
 .textPhoto span {
     color: white;
     background-color: #000000;
-    padding: 5px 15px 5px 10px;
-    opacity: 0.75;
+    padding: 5px 15px 5px 10px; 
+    opacity: 0.75; 
 }
 
-.projectsHeder {
-    width: 95%;
-    margin: 1.3rem auto;
+#projectsHeader {
+    width: 100%;
+    padding: 20px;
 }
 
 .projectsHeder p {
@@ -89,10 +83,10 @@ a {
 .projectsList {
     margin-top: 30px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    column-gap: 1.3rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
     row-gap: 8px;
+
 }
 
 .mobileApper span {
@@ -103,38 +97,36 @@ a {
     opacity: 0.75;
 }
 
+
 .project img {
-    position: relative;
     width: 100%;
 }
 
 .project p {
     background-color: #000000;
-    z-index: 1;
     position: absolute;
     color: white;
     padding: 10px;
-    font-size: small;
+    font-size: 15px;
     text-align: center;
 }
 
-.about {
-    width: 95%;
-    margin: 1rem auto;
+#about {
+    width: 100%;
+    padding: 20px;
 }
 
 .aboutHeader {
-    margin: 2rem 0;
+    margin: 32px 0;
     font-weight: 200;
     font-size: 20px;
 }
 
 .aboutList {
-    width: 100%;
     display: flex;
-    justify-content: space between;
-    gap: 1.5rem;
-    margin: 3rem 0;
+    justify-content: space-between;
+    gap: 20px;
+    padding-top: 10px;
 }
 
 .aboutListElement img {
@@ -146,37 +138,37 @@ a {
 }
 
 .aboutListElementPosition {
-    font-size: small;
+    font-size: 12px;
     font-weight: lighter;
     margin: 18px 0;
 }
 
 .aboutListElementParagraph {
-    font-size: small;
+    font-size: 12px;
     font-weight: 400;
 }
 
 .aboutListElementButton {
     width: 100%;
-    padding: 0.5rem 0;
+    padding: 8px 0;
     margin-top: 10px;
     text-align: center;
     background-color: rgb(242, 240, 240);
     font-weight: 400;
 }
 
-.contact {
-    width: 95%;
-    margin: 1.3rem auto;
+#contact {
+    width: 100%;
+    padding: 20px;
 }
 
 .contactTitle {
     font-size: 20px;
-    margin: 1.5rem 0;
+    margin: 24px 0;
 }
 
 .contactParagraph {
-    font-size: small;
+    font-size: 12px;
 }
 
 .contactList {
@@ -192,13 +184,14 @@ a {
 }
 
 @media (max-width: 780px) {
+
     .aboutList {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 1fr;
     }
-
+    
     .projectsList {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 1fr;
         column-gap: 20px;
         row-gap: 10px;
     }
@@ -208,7 +201,8 @@ a {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width : 480px) {
+
     .textPhoto {
         display: none;
     }
