--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -37,20 +37,20 @@ nav{
             width: 80px;
         }
 
-        li a{
+        li a {
             text-decoration: none;
             color: #000000;
         }
     } 
 }
 header{
-    position: $pRelative;
+    position: relative;
     width: 100%;
     height: 700px;
     background: url(/assets/5.jpg) no-repeat center/cover;
     
     div{
-        position: $pAbsolute;
+        position: absolute;
         top:50%;
         left: 45%;
         display: flex;
@@ -91,25 +91,25 @@ header{
 
         div{
             width:100%;
-            position: $pRelative;
+            position: relative;
 
             p{
-                position: $pAbsolute;
+                position: absolute;
                 padding: 10px 20px;
-                color:white;
+                color: white;
                 background-color: black;
                 font-size: 15px;
             }
 
             img{
-                width:100%;
+                width: 100%;
             }
         }
     }
 }
 
 .aboutSection{
-    width:100%;
+    width: 100%;
     padding: 20px;
 
     p {
@@ -130,6 +130,7 @@ header{
             display: flex;
             flex-direction: column;
             width:100%;
+
             img{
                 width:100%;
             }
@@ -189,7 +190,7 @@ header{
     .projectsMenu{
         .projectsList{
             display: grid;
-            grid-template-columns:1fr 1fr;
+            grid-template-columns: 1fr 1fr;
         }
     }
 
@@ -204,7 +205,7 @@ header{
     .projectsMenu{
         .projectsList{
             display: grid;
-            grid-template-columns:1fr;
+            grid-template-columns: 1fr;
         }
     }
 
