--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -73,6 +73,10 @@ nav{
             font-size: 20px;
             font-weight: 1000;
         }
+    }
+    &__background{
+        width:$allWidth;
+        height: 700px;
     }    
 }
 .projectsMenu{
