--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -61,7 +61,7 @@ nav ul li a {
   font-size: 20px;
   font-weight: 1000;
 }
-.header__background img {
+.header__background {
   width: 100%;
   height: 700px;
 }
