--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -65,6 +65,9 @@ nav ul li a {
   width: 100%;
   height: 700px;
 }
+.header__background img {
+  width: 100%;
+}
 
 .projectsMenu {
   width: 100%;
