--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -80,7 +80,7 @@ nav{
             width: $allWidth;
             height: 700px;
             img{
-                width: 100%;
+                width: $allWidth;
             }
     }
 }
