--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -81,6 +81,7 @@ nav{
             height: 700px;
             img{
                 width: $allWidth;
+                height:700px;
             }
     }
 }
