--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -79,7 +79,7 @@ nav{
     &__background{
             width: $allWidth;
             height: 700px;
-            img{
+            &__image{
                 width: $allWidth;
             }
     }
