--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -46,10 +46,10 @@ nav{
     } 
 }
 .header{
-    //position: relative;
+    position: relative;
     width: $allWidth;
     height: 700px;
-    //background: url(/assets/5.jpg) no-repeat center/cover;
+    background: url(../assets/5.jpg) no-repeat center/cover;
     
     &__logo{
         position: absolute;
@@ -74,15 +74,6 @@ nav{
             font-weight: 1000;
         }
        
-    }
-    
-    &__background{
-            width: $allWidth;
-            height: 700px;
-           .header__background__image{
-                width: $allWidth;
-                height:700px;
-            }
     }
 }
 .projectsMenu{
