--- a/sass/pages/main.scss
+++ b/sass/pages/main.scss
@@ -36,7 +36,8 @@ nav{
         list-style: none;
 
         li {
-            width: 60px;
+            width: 55px;
+            padding-right:5px;
         }
 
         li a {
