--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -29,7 +29,8 @@ nav ul {
   list-style: none;
 }
 nav ul li {
-  width: 60px;
+  width: 55px;
+  padding-right: 5px;
 }
 nav ul li a {
   text-decoration: none;
@@ -73,25 +74,25 @@ nav ul li a {
   font-size: 20px;
   font-weight: 200;
 }
-.projectsMenu__projectsList {
+.projectsMenu .projectsList {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   -moz-column-gap: 20px;
        column-gap: 20px;
   row-gap: 5px;
 }
-.projectsMenu__projectsList__element {
+.projectsMenu .projectsList__element {
   width: 100%;
   position: relative;
 }
-.projectsMenu__projectsList__element p {
+.projectsMenu .projectsList__element p {
   position: absolute;
   padding: 10px 20px;
   color: white;
   background-color: black;
   font-size: 15px;
 }
-.projectsMenu__projectsList__element img {
+.projectsMenu .projectsList__element img {
   width: 100%;
 }
 
@@ -108,36 +109,36 @@ nav ul li a {
   padding-bottom: 15px;
   font-size: 15px;
 }
-.aboutSection__aboutList {
+.aboutSection .aboutList {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   -moz-column-gap: 20px;
        column-gap: 20px;
   row-gap: 5px;
 }
-.aboutSection__aboutList__element {
+.aboutSection .aboutList__element {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-.aboutSection__aboutList__element img {
+.aboutSection .aboutList__element img {
   width: 100%;
 }
-.aboutSection__aboutList__element .name {
+.aboutSection .aboutList__element .name {
   padding-top: 10px;
   font-weight: 900;
 }
-.aboutSection__aboutList__element .position {
+.aboutSection .aboutList__element .position {
   padding-top: 20px;
   font-size: 15px;
   font-weight: 800;
   color: rgb(144, 142, 142);
 }
-.aboutSection__aboutList__element p {
+.aboutSection .aboutList__element p {
   padding: 15px 0px;
   font-size: 15px;
 }
-.aboutSection__aboutList__element button {
+.aboutSection .aboutList__element button {
   border: 0px;
   width: 100%;
   height: 30px;
