--- a/thirdstage-react/src/component/Contact/contactStyle.scss
+++ b/thirdstage-react/src/component/Contact/contactStyle.scss
@@ -16,11 +16,14 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+
+            &__submit {
+                width:200px;
+                padding: 10px 5px;
+                background-color: black;
+                color:white;
+                margin-top: 20px;
+            }
     }
-    &__submit {
-        padding: 10px 5px;
-        background-color: black;
-        color:white;
-        margin-top: 20px;
-    }
+    
 }
