--- a/thirdstage-react/src/component/About/aboutStyle.scss
+++ b/thirdstage-react/src/component/About/aboutStyle.scss
@@ -1,4 +1,4 @@
-@use "../varibles.scss" as *;
+@use "../General/varibles.scss" as *;
 
 .about {
     width: 100%;
@@ -14,6 +14,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         column-gap: 15px;
+        row-gap: 20px;
     }
 }
 
@@ -26,6 +27,7 @@
         }
     }
 }
+
 @media(max-width:$smallSize){
     .about {
         &__list{
