--- a/thirdstage-react/src/component/InputField/inputStyle.scss
+++ b/thirdstage-react/src/component/InputField/inputStyle.scss
@@ -2,3 +2,11 @@
     border: 2px solid rgb(224, 223, 223);
     padding: 10px
 }
+
+.inputField.error {
+    border: 1px solid red; 
+}
+
+.errorText {
+    color: red; 
+}
