--- a/thirdstage-react/src/component/cards/AboutCard/aboutCardStyle.scss
+++ b/thirdstage-react/src/component/cards/AboutCard/aboutCardStyle.scss
@@ -1,11 +1,10 @@
-
-
 .card {
     
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     &__image {
         width: 100%;
+        height:250px;
     }
 
     &__name {
