--- a/thirdstage-react/src/Containers/About/aboutStyle.scss
+++ b/thirdstage-react/src/Containers/About/aboutStyle.scss
@@ -3,7 +3,7 @@
 .about {
     width: 100%;
     padding: 20px;
-
+    
     &__header {
         font-size: 20px;
         font-weight: 200px;
@@ -15,6 +15,11 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         column-gap: 15px;
         row-gap: 20px;
+    }
+    &__pagination{
+        display: flex;
+        justify-content: center;
+        padding-top: 25px;
     }
 }
 
